<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_send">

    <fragment
        android:id="@+id/nav_send"
        android:name="dev.medveed.safeshare.ui.send.SendFragment"
        android:label="@string/nav_send"
        tools:layout="@layout/fragment_send"
        xmlns:tools="http://schemas.android.com/tools" />

    <fragment
        android:id="@+id/nav_receive"
        android:name="dev.medveed.safeshare.ui.receive.ReceiveFragment"
        android:label="@string/nav_receive" />

    <fragment
        android:id="@+id/nav_history"
        android:name="dev.medveed.safeshare.ui.history.HistoryFragment"
        android:label="@string/nav_history" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="dev.medveed.safeshare.ui.settings.SettingsFragment"
        android:label="@string/nav_settings" />
</navigation>
